--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,12 @@
 html {
     font-family: Arial, sans-serif;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+table.fixed th, table.fixed td {
+    width: 200px;
+}
