--- a/style/overlay.css
+++ b/style/overlay.css
@@ -11,14 +11,17 @@
 }
 
 .overlay div {
-    width: 300px;
+    width: 500px;
     margin: 100px auto;
     background-color: purple;
     color: white;
     padding: 15px;
     text-align: center;
-    border: 1px solid black;
     box-shadow: 3px 3px 5px black;
+}
+
+.overlay textarea {
+    resize: vertical;
 }
 
 .exit {
@@ -27,4 +30,8 @@
     border: none;
     background-color: purple;
     color: white;
+}
+
+.exit:hover {
+    border: 1px solid white;
 }
