--- a/style/overlay.css
+++ b/style/overlay.css
@@ -13,7 +13,7 @@
 .overlay div {
     width: 500px;
     margin: 100px auto;
-    background-color: purple;
+    background-color: #202E51;
     color: white;
     padding: 15px;
     text-align: center;
@@ -28,10 +28,15 @@
     display: block;
     float: right;
     border: none;
-    background-color: purple;
+    background-color: #202E51;
     color: white;
 }
 
 .exit:hover {
     border: 1px solid white;
+}
+
+.warning {
+    color: red;
+    font-size: .75em;
 }
