--- a/style/main.css
+++ b/style/main.css
@@ -2,6 +2,17 @@ html {
     font-family: Arial, sans-serif;
 }
 
+.movie_image {
+    max-height: 200px;
+    max-width: 200px;
+    display: block;
+}
+
+.movie_block {
+    border: 1px solid black;
+    margin-top: -1px; 
+}
+
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
