--- a/style/main.css
+++ b/style/main.css
@@ -18,6 +18,10 @@ html {
     margin-top: -1px;
 }
 
+.search_bar {
+    border: 1px solid black;
+}
+
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
