--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,39 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald:700');
+
 html {
     font-family: Arial, sans-serif;
 }
 
 body {
     background-color: gray;
+}
+
+div.logo {
+    position: fixed;
+    left: 10px;
+    top: 10px;
+    border-radius: 50px 2px 50px 2px;
+    background-color: orange;
+    border: 10px solid black;
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-weight: bold;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.5em;
+    text-decoration: none;
+    color: black;
+}
+
+header {
+    text-align: center;
+    min-height: 100px;
+}
+
+header h1 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 3em;
 }
 
 footer {
@@ -17,7 +47,7 @@ section.content {
     margin: auto;
     background-color: wheat;
     padding: 10px;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 0px 25px 100px 5px rgba(0,0,0,0.75);
     border-radius: 10px;
 }
 
