--- a/style/main.css
+++ b/style/main.css
@@ -73,6 +73,12 @@ section.content {
     border-radius: 10px;
 }
 
+.aggregate {
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2em;
+}
+
 section.search {
     width: 40%;
     margin: auto;
@@ -87,17 +93,6 @@ section.search input, datalist, option {
     font-size: .75em;
 }
 
-.movie_image {
-    max-height: 400px;
-    max-width: 200px;
-    display: block;
-}
-
-.movie_block {
-    border: 1px solid black;
-    margin-top: -1px; 
-}
-
 .review_block {
     border: 1px solid black;
     margin-top: -1px;
@@ -110,5 +105,10 @@ table, th, td {
 
 table.fixed th, table.fixed td {
     width: 200px;
+}
+
+a {
+    text-decoration: none;
+    color: red;
 }
 
