--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:700');
+@import url('logo.css');
 
 html {
     font-family: Arial, sans-serif;
@@ -6,25 +7,6 @@ html {
 
 body {
     background-color: gray;
-}
-
-div.logo {
-    position: fixed;
-    left: 10px;
-    top: 10px;
-    border-radius: 50px 2px 50px 2px;
-    background-color: orange;
-    border: 10px solid black;
-    width: 100px;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
-    font-weight: bold;
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.5em;
-    text-decoration: none;
-    color: black;
-    box-shadow: 5px 5px 20px black;
 }
 
 section.login {
