close #25: web colors applied to the site

--- a/style/logo.css
+++ b/style/logo.css
@@ -4,7 +4,7 @@ div.logo {
     left: 10px;
     top: 10px;
     border-radius: 50px 2px 50px 2px;
-    background-color: orange;
+    background-color: #771100;
     border: 10px solid black;
     width: 100px;
     height: 100px;
