--- a/style/main.css
+++ b/style/main.css
@@ -3,10 +3,17 @@
 
 html {
     font-family: Arial, sans-serif;
+    height: 100%;
 }
 
 body {
-    background-color: gray;
+    background: -webkit-gradient(linear, center top, center bottom,
+        color-stop(1%, #8D8E8E), color-stop(100%, white));
+    background: -moz-linear-gradient(top center, #8D8E8E 1%, white 100%);
+    background: linear-gradient(to bottom, #8D8E8E 1%, white 100%);
+    height: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 section.login {
@@ -16,7 +23,7 @@ section.login {
     text-align: right;
     border: 1px solid black;
     padding: 5px;
-    background-color: burlywood;
+    background-color: #BBBBBF;
     box-shadow: 5px 5px 20px black;
     border-radius: 10px;
     min-width: 265px;
@@ -37,7 +44,7 @@ header h1 {
     border: 1px solid black;
     font-family: 'Oswald', sans-serif;
     font-size: 3em;
-    background-color: lightblue;
+    background-color: #52D4DC;
     box-shadow: 5px 5px 10px black;
     border-radius: 10px;
 }
@@ -51,7 +58,8 @@ footer {
 section.content {
     width: 50%;
     margin: auto;
-    background-color: wheat;
+    margin-bottom: 20px;
+    background-color: #BBBBBF;
     padding: 10px;
     box-shadow: 0px 25px 100px 5px rgba(0,0,0,0.75);
     border-radius: 10px;
@@ -67,7 +75,7 @@ section.search {
     width: 40%;
     margin: auto;
     border: 1px solid black;
-    background-color: wheat;
+    background-color: #BBBBBF;
     box-shadow: 5px 5px 10px black;
     font-size: 2em;
     border-radius: 10px;
@@ -93,6 +101,9 @@ table.fixed th, table.fixed td {
 
 a {
     text-decoration: none;
-    color: red;
+    color: #771100;
 }
 
+a:hover {
+    text-decoration: underline;
+}
