--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald:700');
 @import url('logo.css');
+@import url('button.css');
 
 html {
     font-family: Arial, sans-serif;
@@ -14,12 +15,27 @@ body {
     height: 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    margin: 0;
+    padding-top: 50px; 
+}
+
+section.add_items {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5%;
+    background-color: #475B5A;
+    text-align: center;
+    z-index: 2;
+    display: block;
+    box-shadow: 5px 5px 20px black;
 }
 
 section.login {
     position: absolute;
     right: 10px;
-    top: 10px;
+    top: 75px;
     text-align: right;
     border: 1px solid black;
     padding: 5px;
@@ -74,6 +90,7 @@ section.content {
 section.search {
     width: 40%;
     margin: auto;
+    margin-bottom: 20px;
     border: 1px solid black;
     background-color: #BBBBBF;
     box-shadow: 5px 5px 10px black;
@@ -105,5 +122,5 @@ a {
 }
 
 a:hover {
-    text-decoration: underline;
+    color: orangered;
 }
