--- a/style/main.css
+++ b/style/main.css
@@ -24,7 +24,7 @@ section.top_bar {
     top: 0;
     left: 0;
     width: 100%;
-    height: 5%;
+    height: 50px;
     background-color: #475B5A;
     text-align: center;
     z-index: 2;
