--- a/style/button.css
+++ b/style/button.css
@@ -1,5 +1,7 @@
 
-.top_bar input[type="button"], input[type="submit"] {
+.top_bar input[type="button"],
+    input[type="submit"],
+    input[type="reset"] {
 	font-family: 'Oswald', sans-serif;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
@@ -15,14 +17,18 @@
         margin-top: 8px;
 }
 
-.top_bar input[type="button"]:hover, input[type="submit"]:hover {
+.top_bar input[type="button"]:hover, 
+    input[type="submit"]:hover,
+    input[type="reset"]:hover {
 	background: -moz-linear-gradient( center top, #8D8E8E 5%, #ededed 100% );
 	background: -ms-linear-gradient( top, #8D8E8E 5%, #ededed 100% );
 	background: -webkit-gradient( linear, left top, left bottom, color-stop(5%, #8D8E8E), color-stop(100%, #ededed) );
 	background-color: #dfdfdf;
 }
 
-.top_bar input[type="button"]:active, input[type="submit"]:active {
+.top_bar input[type="button"]:active, 
+    input[type="submit"]:active,
+    input[type="reset"]:active {
 	position: relative;
 	top: 1px;
 }
