--- a/style/button.css
+++ b/style/button.css
@@ -1,7 +1,7 @@
 
 .top_bar input[type="button"],
     input[type="submit"],
-    input[type="reset"] {
+    input[type="reset"], #btnAddDirector {
 	font-family: 'Oswald', sans-serif;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
@@ -19,7 +19,8 @@
 
 .top_bar input[type="button"]:hover, 
     input[type="submit"]:hover,
-    input[type="reset"]:hover {
+    input[type="reset"]:hover, 
+    #btnAddDirector:hover {
 	background: -moz-linear-gradient( center top, #8D8E8E 5%, #ededed 100% );
 	background: -ms-linear-gradient( top, #8D8E8E 5%, #ededed 100% );
 	background: -webkit-gradient( linear, left top, left bottom, color-stop(5%, #8D8E8E), color-stop(100%, #ededed) );
@@ -28,7 +29,8 @@
 
 .top_bar input[type="button"]:active, 
     input[type="submit"]:active,
-    input[type="reset"]:active {
+    input[type="reset"]:active,
+    #btnAddDirector {
 	position: relative;
 	top: 1px;
 }
