--- a/style/button.css
+++ b/style/button.css
@@ -25,6 +25,7 @@
 	background: -ms-linear-gradient( top, #8D8E8E 5%, #ededed 100% );
 	background: -webkit-gradient( linear, left top, left bottom, color-stop(5%, #8D8E8E), color-stop(100%, #ededed) );
 	background-color: #dfdfdf;
+        color: black;
 }
 
 .top_bar input[type="button"]:active, 
