--- a/style/main.css
+++ b/style/main.css
@@ -51,18 +51,13 @@ header {
     min-height: 100px;
 }
 
-header h1 {
-    width: 60%;
-    height: 100px;
-    line-height: 100px;
+header canvas#slide_show {
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
     border: 1px solid black;
-    font-family: 'Oswald', sans-serif;
-    font-size: 3em;
-    background-color: #52D4DC;
     box-shadow: 5px 5px 10px black;
-    border-radius: 10px;
 }
 
 footer {
