--- a/style/button.css
+++ b/style/button.css
@@ -1,7 +1,7 @@
 
 .top_bar input[type="button"],
     input[type="submit"],
-    input[type="reset"], #btnAddDirector, .review {
+    input[type="reset"], #btnAddDirector, .edit_review {
 	font-family: 'Oswald', sans-serif;
 	-moz-border-radius: 8px;
 	-webkit-border-radius: 8px;
@@ -20,7 +20,7 @@
 .top_bar input[type="button"]:hover, 
     input[type="submit"]:hover,
     input[type="reset"]:hover, 
-    #btnAddDirector:hover, .review:hover {
+    #btnAddDirector:hover, .edit_review:hover {
 	background: -moz-linear-gradient( center top, #8D8E8E 5%, #ededed 100% );
 	background: -ms-linear-gradient( top, #8D8E8E 5%, #ededed 100% );
 	background: -webkit-gradient( linear, left top, left bottom, color-stop(5%, #8D8E8E), color-stop(100%, #ededed) );
@@ -31,12 +31,12 @@
 .top_bar input[type="button"]:active, 
     input[type="submit"]:active,
     input[type="reset"]:active,
-    #btnAddDirector:active, .review:active {
+    #btnAddDirector:active, .edit_review:active {
 	position: relative;
 	top: 1px;
 }
 
-.review {
+.edit_review {
     float: right;
     margin: 10px;
 }
